Remove extra stuff

--- a/BLE_Custom/BLE_Custom.ioc
+++ b/BLE_Custom/BLE_Custom.ioc
@@ -62,24 +62,28 @@ LPUART1.SwapParam=UART_ADVFEATURE_SWAP_DISABLE
 LPUART1.TXFIFOThreshold=UART_TXFIFO_THRESHOLD_1_8
 LPUART1.TxPinLevelInvertParam=UART_ADVFEATURE_TXINV_DISABLE
 LPUART1.WordLength=UART_WORDLENGTH_8B
+MMTAppRegionsCount=0
+MMTConfigApplied=false
+MMTSectionSuffix=
 Mcu.CPN=STM32WB55RGV6
 Mcu.Family=STM32WB
 Mcu.IP0=DMA
 Mcu.IP1=HSEM
-Mcu.IP10=STM32_WPAN
-Mcu.IP11=SYS
-Mcu.IP12=TINY_LPM
-Mcu.IP13=USART1
-Mcu.IP14=P-NUCLEO-WB55-NUCLEO
+Mcu.IP10=SEQUENCER
+Mcu.IP11=STM32_WPAN
+Mcu.IP12=SYS
+Mcu.IP13=TINY_LPM
+Mcu.IP14=USART1
+Mcu.IP15=P-NUCLEO-WB55-NUCLEO
 Mcu.IP2=IPCC
 Mcu.IP3=LPUART1
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=RF
-Mcu.IP7=RNG
-Mcu.IP8=RTC
-Mcu.IP9=SEQUENCER
-Mcu.IPNb=15
+Mcu.IP4=MEMORYMAP
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RF
+Mcu.IP8=RNG
+Mcu.IP9=RTC
+Mcu.IPNb=16
 Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
 Mcu.Pin0=PC14-OSC32_IN
@@ -99,6 +103,7 @@ Mcu.Pin20=VP_SEQUENCER_VS_SEQUENCER
 Mcu.Pin21=VP_STM32_WPAN_VS_BLE_HOST
 Mcu.Pin22=VP_SYS_VS_Systick
 Mcu.Pin23=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin24=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PA3
 Mcu.Pin4=PC4
 Mcu.Pin5=RF1
@@ -106,7 +111,7 @@ Mcu.Pin6=OSC_OUT
 Mcu.Pin7=OSC_IN
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WB55RGVx
@@ -309,11 +314,11 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
-STM32_WPAN.AD_SERVICE_CLASS_UUID_1=18 0D
-STM32_WPAN.AD_SERVICE_CLASS_UUID_1_INV=[0D, 18]
+STM32_WPAN.AD_SERVICE_CLASS_UUID_1=18 15
+STM32_WPAN.AD_SERVICE_CLASS_UUID_1_INV=[15, 18]
 STM32_WPAN.AD_SERVICE_CLASS_UUID_NBR=1
-STM32_WPAN.AD_TYPE_COMPLETE_LOCAL_NAME=MyCST
-STM32_WPAN.AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH=6
+STM32_WPAN.AD_TYPE_COMPLETE_LOCAL_NAME=ELM LED
+STM32_WPAN.AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH=8
 STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_NBR=1
 STM32_WPAN.AD_TYPE_MANUFACTURER_SPECIFIC_DATA_COMPANY_IDENTIFIER=30,00
 STM32_WPAN.AD_TYPE_SHORTENED_LOCAL_NAME=MyCST
@@ -330,8 +335,8 @@ STM32_WPAN.CFG_DEBUG_APP_TRACE=1
 STM32_WPAN.CFG_DEBUG_BLE_TRACE=1
 STM32_WPAN.CFG_DEBUG_TRACE_LIGHT=1
 STM32_WPAN.CFG_DEBUG_TRACE_UART=hw_uart1
-STM32_WPAN.CFG_GAP_DEVICE_NAME=MY_CUSTOM
-STM32_WPAN.CFG_GAP_DEVICE_NAME_LENGTH=9
+STM32_WPAN.CFG_GAP_DEVICE_NAME=ELM_LED
+STM32_WPAN.CFG_GAP_DEVICE_NAME_LENGTH=7
 STM32_WPAN.CFG_HW_LPUART1_DMA_TX_SUPPORTED=1
 STM32_WPAN.CFG_HW_LPUART1_ENABLED=1
 STM32_WPAN.CFG_HW_USART1_ENABLED=1
@@ -349,7 +354,7 @@ STM32_WPAN.INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME\ =0
 STM32_WPAN.INCLUDE_AD_TYPE_TX_POWER_LEVEL=1
 STM32_WPAN.IPParameters=CUSTOM_TEMPLATE,CUSTOM_P2P_SERVER,NUMBER_OF_SERVICES,SERVICE1_LONG_NAME,SERVICE1_SHORT_NAME,SERVICE2_LONG_NAME,SERVICE2_SHORT_NAME,SERVICE1_NUMBER_OF_CHARACTERISTICS,SERVICE1_UUID_TYPE,SERVICE1_UUID,SERVICE1_CHAR1_LONG_NAME,SERVICE1_CHAR1_SHORT_NAME,SERVICE1_CHAR1_UUID_TYPE,SERVICE1_CHAR1_UUID,SERVICE1_CHAR1_VALUE_LENGTH,SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_LONG_NAME,SERVICE1_CHAR2_SHORT_NAME,SERVICE1_CHAR2_UUID,SERVICE1_CHAR2_PROP_NOTIFY,SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_VALUE_LENGTH,SERVICE2_NUMBER_OF_CHARACTERISTICS,SERVICE2_UUID_TYPE,SERVICE2_UUID,SERVICE2_CHAR1_UUID_TYPE,SERVICE2_CHAR2_UUID_TYPE,SERVICE2_CHAR3_UUID_TYPE,SERVICE2_CHAR1_LONG_NAME,SERVICE2_CHAR1_SHORT_NAME,SERVICE2_CHAR1_UUID,SERVICE1_CHAR1_LENGTH_CHARACTERISTIC,SERVICE1_CHAR2_LENGTH_CHARACTERISTIC,SERVICE2_CHAR2_LONG_NAME,SERVICE2_CHAR2_SHORT_NAME,SERVICE2_CHAR2_UUID,SERVICE2_CHAR2_PROP_READ,SERVICE2_CHAR1_PROP_NOTIFY,SERVICE2_CHAR1_LENGTH_CHARACTERISTIC,SERVICE2_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR1_VALUE_LENGTH,SERVICE2_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR3_LONG_NAME,SERVICE2_CHAR3_SHORT_NAME,SERVICE2_CHAR3_UUID,SERVICE2_CHAR3_PROP_WRITE,SERVICE2_CHAR3_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR3_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_GAP_DEVICE_NAME,CFG_GAP_DEVICE_NAME_LENGTH,INCLUDE_AD_TYPE_TX_POWER_LEVEL,INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH,INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME ,AD_TYPE_SHORTENED_LOCAL_NAME ,GAP_PERIPHERAL_ROLE,CFG_HW_LPUART1_ENABLED,CFG_HW_LPUART1_DMA_TX_SUPPORTED,CFG_HW_USART1_ENABLED,CFG_DEBUG_TRACE_UART,CFG_CONSOLE_MENU,CFG_DEBUG_TRACE_LIGHT,CFG_DEBUG_APP_TRACE,CFG_DEBUG_BLE_TRACE,CFG_ADV_BD_ADDRESS,PAIRING_PARAMETERS,SERVICE2_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE2_CHAR2_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE2_CHAR3_GATT_NOTIFY_ATTRIBUTE_WRITE,INCLUDE_AD_TYPE_MANUFACTURER_SPECIFIC_DATA,INCLUDE_AD_TYPE_16_BIT_SERV_UUID_CMPLT_LIST,AD_SERVICE_CLASS_UUID_1,INCLUDE_AD_TYPE_128_BIT_SERV_UUID_CMPLT_LIST,AD_TYPE_MANUFACTURER_SPECIFIC_DATA_COMPANY_IDENTIFIER,AD_TYPE_MANUFACTURER_DATA_NBR,AD_SERVICE_CLASS_UUID_NBR,INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME,AD_TYPE_SHORTENED_LOCAL_NAME,AD_TYPE_SHORTENED_LOCAL_NAME_LENGTH,CFG_TX_POWER,CFG_USE_SMPS,CFG_BLE_MAX_CONN_EVENT_LENGTH,AD_SERVICE_CLASS_UUID_1_INV,SERVICE1_CHAR1_PROP_READ,SERVICE1_CHAR1_PROP_WRITE_WITHOUT_RESP,BLE_ADDR_TYPE,STATIC_RANDOM_ADDRESS,L2CAP_REQUEST_NEW_CONN_PARAM,CFG_BLE_MIN_TX_POWER,CFG_BLE_MAX_TX_POWER,SERVICE1_CHAR3_LONG_NAME,SERVICE1_CHAR3_SHORT_NAME,SERVICE1_CHAR3_UUID,SERVICE1_CHAR3_VALUE_LENGTH,SERVICE1_CHAR3_LENGTH_CHARACTERISTIC,SERVICE1_CHAR3_PROP_NOTIFY,SERVICE1_CHAR3_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR3_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_BLE_MAX_ATT_MTU
 STM32_WPAN.L2CAP_REQUEST_NEW_CONN_PARAM=1
-STM32_WPAN.NUMBER_OF_SERVICES=2
+STM32_WPAN.NUMBER_OF_SERVICES=1
 STM32_WPAN.PAIRING_PARAMETERS=ON
 STM32_WPAN.SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP=\ 
 STM32_WPAN.SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP=\ 
@@ -377,9 +382,9 @@ STM32_WPAN.SERVICE1_CHAR3_PROP_NOTIFY=CHAR_PROP_NOTIFY
 STM32_WPAN.SERVICE1_CHAR3_SHORT_NAME=LONG_C
 STM32_WPAN.SERVICE1_CHAR3_UUID=FE 43
 STM32_WPAN.SERVICE1_CHAR3_VALUE_LENGTH=300
-STM32_WPAN.SERVICE1_LONG_NAME=My_P2P_Server
+STM32_WPAN.SERVICE1_LONG_NAME=LED_Server
 STM32_WPAN.SERVICE1_NUMBER_OF_CHARACTERISTICS=3
-STM32_WPAN.SERVICE1_SHORT_NAME=My_P2PS
+STM32_WPAN.SERVICE1_SHORT_NAME=LEDS
 STM32_WPAN.SERVICE1_UUID=FE 40
 STM32_WPAN.SERVICE1_UUID_TYPE=0x02
 STM32_WPAN.SERVICE2_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE=\ 
@@ -440,6 +445,8 @@ VP_HSEM_VS_HSEM.Mode=HSEM_Activate
 VP_HSEM_VS_HSEM.Signal=HSEM_VS_HSEM
 VP_IPCC_VS_IPCC.Mode=IPCC_Activate
 VP_IPCC_VS_IPCC.Signal=IPCC_VS_IPCC
+VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
+VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
