--- a/BLE_Custom/BLE_Custom.ioc
+++ b/BLE_Custom/BLE_Custom.ioc
@@ -88,30 +88,31 @@ Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PD0
-Mcu.Pin11=PD1
-Mcu.Pin12=PB5
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_HSEM_VS_HSEM
-Mcu.Pin16=VP_IPCC_VS_IPCC
-Mcu.Pin17=VP_RNG_VS_RNG
-Mcu.Pin18=VP_RTC_VS_RTC_Activate
-Mcu.Pin19=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin10=PA14
+Mcu.Pin11=PD0
+Mcu.Pin12=PD1
+Mcu.Pin13=PB5
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_HSEM_VS_HSEM
+Mcu.Pin17=VP_IPCC_VS_IPCC
+Mcu.Pin18=VP_RNG_VS_RNG
+Mcu.Pin19=VP_RTC_VS_RTC_Activate
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_SEQUENCER_VS_SEQUENCER
-Mcu.Pin21=VP_STM32_WPAN_VS_BLE_HOST
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TINY_LPM_VS_TINY_LPM
-Mcu.Pin24=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin21=VP_SEQUENCER_VS_SEQUENCER
+Mcu.Pin22=VP_STM32_WPAN_VS_BLE_HOST
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin25=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PA3
 Mcu.Pin4=PC4
 Mcu.Pin5=RF1
 Mcu.Pin6=OSC_OUT
 Mcu.Pin7=OSC_IN
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=25
+Mcu.Pin8=PB1
+Mcu.Pin9=PA13
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WB55RGVx
@@ -161,6 +162,10 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=LPUART1_RX
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=Red_Led
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Speed,GPIO_Label
 PB5.GPIO_Label=Blue_Led
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -249,43 +254,46 @@ ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_LPUART1_UART_Init-LPUART1-true-HAL-false,5-MX_USART1_UART_Init-USART1-true-HAL-false,6-MX_RTC_Init-RTC-false-HAL-true,7-APPE_Init-STM32_WPAN-false-HAL-false,8-MX_IPCC_Init-IPCC-false-HAL-true,9-MX_RNG_Init-RNG-false-HAL-true,10-MX_RF_Init-RF-false-HAL-true,0-MX_HSEM_Init-HSEM-false-HAL-true
 RCC.ADCFreq_Value=64000000
-RCC.AHBFreq_Value=32000000
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=32000000
-RCC.APB2Freq_Value=32000000
-RCC.APB2TimFreq_Value=32000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
+RCC.AHBFreq_Value=2000000
+RCC.APB1Freq_Value=2000000
+RCC.APB1TimFreq_Value=2000000
+RCC.APB2Freq_Value=2000000
+RCC.APB2TimFreq_Value=2000000
 RCC.APB3Freq_Value=16000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.Cortex2Freq_Value=32000000
-RCC.CortexFreq_Value=32000000
+RCC.CortexFreq_Value=2000000
 RCC.FCLK2Freq_Value=32000000
-RCC.FCLKCortexFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=2000000
 RCC.FamilyName=M
 RCC.HCLK2Freq_Value=32000000
 RCC.HCLK3Freq_Value=32000000
-RCC.HCLKFreq_Value=32000000
+RCC.HCLKFreq_Value=2000000
 RCC.HCLKRFFreq_Value=16000000
 RCC.HSE_VALUE=32000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=32000000
-RCC.I2C3Freq_Value=32000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48CLockSelection,Cortex2Freq_Value,CortexFreq_Value,FCLK2Freq_Value,FCLKCortexFreq_Value,FamilyName,HCLK2Freq_Value,HCLK3Freq_Value,HCLKFreq_Value,HCLKRFFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_Drive_Capability,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RFWKPClockSelection,RFWKPFreq_Value,RNGCLockSelection,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SMPS1Freq_Value,SMPSCLockSelection,SMPSCLockSelectionVirtual,SMPSDivider,SMPSFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.I2C1Freq_Value=2000000
+RCC.I2C3Freq_Value=2000000
+RCC.IPParameters=ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48CLockSelection,Cortex2Freq_Value,CortexFreq_Value,FCLK2Freq_Value,FCLKCortexFreq_Value,FamilyName,HCLK2Freq_Value,HCLK3Freq_Value,HCLKFreq_Value,HCLKRFFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_Drive_Capability,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RFWKPClockSelection,RFWKPFreq_Value,RNGCLockSelection,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SMPS1Freq_Value,SMPSCLockSelection,SMPSCLockSelectionVirtual,SMPSDivider,SMPSFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
 RCC.LCDFreq_Value=32768
-RCC.LPTIM1Freq_Value=32000000
-RCC.LPTIM2Freq_Value=32000000
-RCC.LPUART1Freq_Value=32000000
+RCC.LPTIM1Freq_Value=2000000
+RCC.LPTIM2Freq_Value=2000000
+RCC.LPUART1Freq_Value=2000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_Drive_Capability=RCC_LSEDRIVE_LOW
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=32000000
+RCC.PLLM=RCC_PLLM_DIV2
 RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQoutputFreq_Value=64000000
-RCC.PLLRCLKFreq_Value=64000000
+RCC.PLLR=RCC_PLLR_DIV4
+RCC.PLLRCLKFreq_Value=32000000
 RCC.PLLSAI1PoutputFreq_Value=64000000
 RCC.PLLSAI1QoutputFreq_Value=64000000
 RCC.PLLSAI1RoutputFreq_Value=64000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=32000000
 RCC.RFWKPClockSelection=RCC_RFWKPCLKSOURCE_LSE
 RCC.RFWKPFreq_Value=32768
@@ -300,8 +308,8 @@ RCC.SMPSCLockSelectionVirtual=RCC_SMPSCLKSOURCE_HSE
 RCC.SMPSDivider=4
 RCC.SMPSFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=32000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
-RCC.USART1Freq_Value=32000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.USART1Freq_Value=2000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
@@ -340,6 +348,7 @@ STM32_WPAN.CFG_GAP_DEVICE_NAME_LENGTH=7
 STM32_WPAN.CFG_HW_LPUART1_DMA_TX_SUPPORTED=1
 STM32_WPAN.CFG_HW_LPUART1_ENABLED=1
 STM32_WPAN.CFG_HW_USART1_ENABLED=1
+STM32_WPAN.CFG_LSCLK_LSE=0
 STM32_WPAN.CFG_TX_POWER=(0x19) /* 0dBm */
 STM32_WPAN.CFG_USE_SMPS=0
 STM32_WPAN.CUSTOM_P2P_SERVER=Disabled
@@ -352,7 +361,7 @@ STM32_WPAN.INCLUDE_AD_TYPE_MANUFACTURER_SPECIFIC_DATA=1
 STM32_WPAN.INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME=0
 STM32_WPAN.INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME\ =0
 STM32_WPAN.INCLUDE_AD_TYPE_TX_POWER_LEVEL=1
-STM32_WPAN.IPParameters=CUSTOM_TEMPLATE,CUSTOM_P2P_SERVER,NUMBER_OF_SERVICES,SERVICE1_LONG_NAME,SERVICE1_SHORT_NAME,SERVICE2_LONG_NAME,SERVICE2_SHORT_NAME,SERVICE1_NUMBER_OF_CHARACTERISTICS,SERVICE1_UUID_TYPE,SERVICE1_UUID,SERVICE1_CHAR1_LONG_NAME,SERVICE1_CHAR1_SHORT_NAME,SERVICE1_CHAR1_UUID_TYPE,SERVICE1_CHAR1_UUID,SERVICE1_CHAR1_VALUE_LENGTH,SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_LONG_NAME,SERVICE1_CHAR2_SHORT_NAME,SERVICE1_CHAR2_UUID,SERVICE1_CHAR2_PROP_NOTIFY,SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_VALUE_LENGTH,SERVICE2_NUMBER_OF_CHARACTERISTICS,SERVICE2_UUID_TYPE,SERVICE2_UUID,SERVICE2_CHAR1_UUID_TYPE,SERVICE2_CHAR2_UUID_TYPE,SERVICE2_CHAR3_UUID_TYPE,SERVICE2_CHAR1_LONG_NAME,SERVICE2_CHAR1_SHORT_NAME,SERVICE2_CHAR1_UUID,SERVICE1_CHAR1_LENGTH_CHARACTERISTIC,SERVICE1_CHAR2_LENGTH_CHARACTERISTIC,SERVICE2_CHAR2_LONG_NAME,SERVICE2_CHAR2_SHORT_NAME,SERVICE2_CHAR2_UUID,SERVICE2_CHAR2_PROP_READ,SERVICE2_CHAR1_PROP_NOTIFY,SERVICE2_CHAR1_LENGTH_CHARACTERISTIC,SERVICE2_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR1_VALUE_LENGTH,SERVICE2_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR3_LONG_NAME,SERVICE2_CHAR3_SHORT_NAME,SERVICE2_CHAR3_UUID,SERVICE2_CHAR3_PROP_WRITE,SERVICE2_CHAR3_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR3_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_GAP_DEVICE_NAME,CFG_GAP_DEVICE_NAME_LENGTH,INCLUDE_AD_TYPE_TX_POWER_LEVEL,INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH,INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME ,AD_TYPE_SHORTENED_LOCAL_NAME ,GAP_PERIPHERAL_ROLE,CFG_HW_LPUART1_ENABLED,CFG_HW_LPUART1_DMA_TX_SUPPORTED,CFG_HW_USART1_ENABLED,CFG_DEBUG_TRACE_UART,CFG_CONSOLE_MENU,CFG_DEBUG_TRACE_LIGHT,CFG_DEBUG_APP_TRACE,CFG_DEBUG_BLE_TRACE,CFG_ADV_BD_ADDRESS,PAIRING_PARAMETERS,SERVICE2_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE2_CHAR2_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE2_CHAR3_GATT_NOTIFY_ATTRIBUTE_WRITE,INCLUDE_AD_TYPE_MANUFACTURER_SPECIFIC_DATA,INCLUDE_AD_TYPE_16_BIT_SERV_UUID_CMPLT_LIST,AD_SERVICE_CLASS_UUID_1,INCLUDE_AD_TYPE_128_BIT_SERV_UUID_CMPLT_LIST,AD_TYPE_MANUFACTURER_SPECIFIC_DATA_COMPANY_IDENTIFIER,AD_TYPE_MANUFACTURER_DATA_NBR,AD_SERVICE_CLASS_UUID_NBR,INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME,AD_TYPE_SHORTENED_LOCAL_NAME,AD_TYPE_SHORTENED_LOCAL_NAME_LENGTH,CFG_TX_POWER,CFG_USE_SMPS,CFG_BLE_MAX_CONN_EVENT_LENGTH,AD_SERVICE_CLASS_UUID_1_INV,SERVICE1_CHAR1_PROP_READ,SERVICE1_CHAR1_PROP_WRITE_WITHOUT_RESP,BLE_ADDR_TYPE,STATIC_RANDOM_ADDRESS,L2CAP_REQUEST_NEW_CONN_PARAM,CFG_BLE_MIN_TX_POWER,CFG_BLE_MAX_TX_POWER,SERVICE1_CHAR3_LONG_NAME,SERVICE1_CHAR3_SHORT_NAME,SERVICE1_CHAR3_UUID,SERVICE1_CHAR3_VALUE_LENGTH,SERVICE1_CHAR3_LENGTH_CHARACTERISTIC,SERVICE1_CHAR3_PROP_NOTIFY,SERVICE1_CHAR3_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR3_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_BLE_MAX_ATT_MTU
+STM32_WPAN.IPParameters=CUSTOM_TEMPLATE,CUSTOM_P2P_SERVER,NUMBER_OF_SERVICES,SERVICE1_LONG_NAME,SERVICE1_SHORT_NAME,SERVICE2_LONG_NAME,SERVICE2_SHORT_NAME,SERVICE1_NUMBER_OF_CHARACTERISTICS,SERVICE1_UUID_TYPE,SERVICE1_UUID,SERVICE1_CHAR1_LONG_NAME,SERVICE1_CHAR1_SHORT_NAME,SERVICE1_CHAR1_UUID_TYPE,SERVICE1_CHAR1_UUID,SERVICE1_CHAR1_VALUE_LENGTH,SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_LONG_NAME,SERVICE1_CHAR2_SHORT_NAME,SERVICE1_CHAR2_UUID,SERVICE1_CHAR2_PROP_NOTIFY,SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_VALUE_LENGTH,SERVICE2_NUMBER_OF_CHARACTERISTICS,SERVICE2_UUID_TYPE,SERVICE2_UUID,SERVICE2_CHAR1_UUID_TYPE,SERVICE2_CHAR2_UUID_TYPE,SERVICE2_CHAR3_UUID_TYPE,SERVICE2_CHAR1_LONG_NAME,SERVICE2_CHAR1_SHORT_NAME,SERVICE2_CHAR1_UUID,SERVICE1_CHAR1_LENGTH_CHARACTERISTIC,SERVICE1_CHAR2_LENGTH_CHARACTERISTIC,SERVICE2_CHAR2_LONG_NAME,SERVICE2_CHAR2_SHORT_NAME,SERVICE2_CHAR2_UUID,SERVICE2_CHAR2_PROP_READ,SERVICE2_CHAR1_PROP_NOTIFY,SERVICE2_CHAR1_LENGTH_CHARACTERISTIC,SERVICE2_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR1_VALUE_LENGTH,SERVICE2_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR3_LONG_NAME,SERVICE2_CHAR3_SHORT_NAME,SERVICE2_CHAR3_UUID,SERVICE2_CHAR3_PROP_WRITE,SERVICE2_CHAR3_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE2_CHAR3_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_GAP_DEVICE_NAME,CFG_GAP_DEVICE_NAME_LENGTH,INCLUDE_AD_TYPE_TX_POWER_LEVEL,INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH,INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME ,AD_TYPE_SHORTENED_LOCAL_NAME ,GAP_PERIPHERAL_ROLE,CFG_HW_LPUART1_ENABLED,CFG_HW_LPUART1_DMA_TX_SUPPORTED,CFG_HW_USART1_ENABLED,CFG_DEBUG_TRACE_UART,CFG_CONSOLE_MENU,CFG_DEBUG_TRACE_LIGHT,CFG_DEBUG_APP_TRACE,CFG_DEBUG_BLE_TRACE,CFG_ADV_BD_ADDRESS,PAIRING_PARAMETERS,SERVICE2_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE2_CHAR2_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE2_CHAR3_GATT_NOTIFY_ATTRIBUTE_WRITE,INCLUDE_AD_TYPE_MANUFACTURER_SPECIFIC_DATA,INCLUDE_AD_TYPE_16_BIT_SERV_UUID_CMPLT_LIST,AD_SERVICE_CLASS_UUID_1,INCLUDE_AD_TYPE_128_BIT_SERV_UUID_CMPLT_LIST,AD_TYPE_MANUFACTURER_SPECIFIC_DATA_COMPANY_IDENTIFIER,AD_TYPE_MANUFACTURER_DATA_NBR,AD_SERVICE_CLASS_UUID_NBR,INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME,AD_TYPE_SHORTENED_LOCAL_NAME,AD_TYPE_SHORTENED_LOCAL_NAME_LENGTH,CFG_TX_POWER,CFG_USE_SMPS,CFG_BLE_MAX_CONN_EVENT_LENGTH,AD_SERVICE_CLASS_UUID_1_INV,SERVICE1_CHAR1_PROP_READ,SERVICE1_CHAR1_PROP_WRITE_WITHOUT_RESP,BLE_ADDR_TYPE,STATIC_RANDOM_ADDRESS,L2CAP_REQUEST_NEW_CONN_PARAM,CFG_BLE_MIN_TX_POWER,CFG_BLE_MAX_TX_POWER,SERVICE1_CHAR3_LONG_NAME,SERVICE1_CHAR3_SHORT_NAME,SERVICE1_CHAR3_UUID,SERVICE1_CHAR3_VALUE_LENGTH,SERVICE1_CHAR3_LENGTH_CHARACTERISTIC,SERVICE1_CHAR3_PROP_NOTIFY,SERVICE1_CHAR3_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR3_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_BLE_MAX_ATT_MTU,CFG_LSCLK_LSE
 STM32_WPAN.L2CAP_REQUEST_NEW_CONN_PARAM=1
 STM32_WPAN.NUMBER_OF_SERVICES=1
 STM32_WPAN.PAIRING_PARAMETERS=ON
