--- a/BLE_Custom/BLE_Custom.ioc
+++ b/BLE_Custom/BLE_Custom.ioc
@@ -88,29 +88,33 @@ Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PD0
-Mcu.Pin11=PD1
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=VP_HSEM_VS_HSEM
-Mcu.Pin15=VP_IPCC_VS_IPCC
-Mcu.Pin16=VP_RNG_VS_RNG
-Mcu.Pin17=VP_RTC_VS_RTC_Activate
-Mcu.Pin18=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin19=VP_SEQUENCER_VS_SEQUENCER
-Mcu.Pin2=PA2
-Mcu.Pin20=VP_STM32_WPAN_VS_BLE_HOST
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TINY_LPM_VS_TINY_LPM
-Mcu.Pin23=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin3=PA3
-Mcu.Pin4=PC4
-Mcu.Pin5=RF1
-Mcu.Pin6=OSC_OUT
-Mcu.Pin7=OSC_IN
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=24
+Mcu.Pin10=OSC_OUT
+Mcu.Pin11=OSC_IN
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PD0
+Mcu.Pin15=PD1
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_HSEM_VS_HSEM
+Mcu.Pin19=VP_IPCC_VS_IPCC
+Mcu.Pin2=PC0
+Mcu.Pin20=VP_RNG_VS_RNG
+Mcu.Pin21=VP_RTC_VS_RTC_Activate
+Mcu.Pin22=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin23=VP_SEQUENCER_VS_SEQUENCER
+Mcu.Pin24=VP_STM32_WPAN_VS_BLE_HOST
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin27=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin3=PC1
+Mcu.Pin4=PA0
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PC4
+Mcu.Pin9=RF1
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WB55RGVx
@@ -142,6 +146,15 @@ OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=TRAFFIC_GND
+PA0.Locked=true
+PA0.Signal=GPIO_Output
+PA1.GPIOParameters=PinState,GPIO_Label
+PA1.GPIO_Label=TRAFFIC_RD
+PA1.Locked=true
+PA1.PinState=GPIO_PIN_RESET
+PA1.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -176,6 +189,15 @@ PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
+PC0.GPIOParameters=GPIO_Speed,GPIO_Label
+PC0.GPIO_Label=TRAFFIC_GR
+PC0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=TRAFFIC_YL
+PC1.Locked=true
+PC1.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
