STM32F3-DISCO UART lights control

--- a/f3-traffic-light/f3-traffic-light.ioc
+++ b/f3-traffic-light/f3-traffic-light.ioc
@@ -9,34 +9,37 @@ Mcu.Family=STM32F3
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USB
-Mcu.IP4=USB_DEVICE
-Mcu.IPNb=5
+Mcu.IP3=USART1
+Mcu.IP4=USB
+Mcu.IP5=USB_DEVICE
+Mcu.IPNb=6
 Mcu.Name=STM32F303V(B-C)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PE13
-Mcu.Pin11=PE14
-Mcu.Pin12=PE15
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PE0
-Mcu.Pin19=PE1
+Mcu.Pin10=PE11
+Mcu.Pin11=PE12
+Mcu.Pin12=PE13
+Mcu.Pin13=PE14
+Mcu.Pin14=PE15
+Mcu.Pin15=PA11
+Mcu.Pin16=PA12
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB3
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin20=PE0
+Mcu.Pin21=PE1
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA0
-Mcu.Pin5=PE8
-Mcu.Pin6=PE9
-Mcu.Pin7=PE10
-Mcu.Pin8=PE11
-Mcu.Pin9=PE12
-Mcu.PinsNb=22
+Mcu.Pin5=PC4
+Mcu.Pin6=PC5
+Mcu.Pin7=PE8
+Mcu.Pin8=PE9
+Mcu.Pin9=PE10
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -91,6 +94,10 @@ PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=OSC32_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC4.Mode=Asynchronous
+PC4.Signal=USART1_TX
+PC5.Mode=Asynchronous
+PC5.Signal=USART1_RX
 PCC.Checker=false
 PCC.Line=STM32F303
 PCC.MCU=STM32F303V(B-C)Tx
@@ -227,6 +234,9 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+USART1.BaudRate=115200
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_CUSTOM_HID_REPORT_DESC_SIZE
 USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=27
