--- a/f3-traffic-light/f3-traffic-light.ioc
+++ b/f3-traffic-light/f3-traffic-light.ioc
@@ -22,16 +22,19 @@ Mcu.Pin11=PE12
 Mcu.Pin12=PE13
 Mcu.Pin13=PE14
 Mcu.Pin14=PE15
-Mcu.Pin15=PA11
-Mcu.Pin16=PA12
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin15=PC8
+Mcu.Pin16=PA8
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=PE0
-Mcu.Pin21=PE1
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PB3
+Mcu.Pin23=PE0
+Mcu.Pin24=PE1
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA0
 Mcu.Pin5=PC4
@@ -39,7 +42,7 @@ Mcu.Pin6=PC5
 Mcu.Pin7=PE8
 Mcu.Pin8=PE9
 Mcu.Pin9=PE10
-Mcu.PinsNb=24
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -61,6 +64,12 @@ PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=B1 [Blue PushButton]
 PA0.Locked=true
 PA0.Signal=GPIO_Input
+PA10.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA10.GPIO_Label=EXT_TRAFFIC_RED
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA10.Locked=true
+PA10.PinState=GPIO_PIN_RESET
+PA10.Signal=GPIO_Output
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=DM
 PA11.Locked=true
@@ -81,6 +90,12 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
+PA8.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA8.GPIO_Label=EXT_TRAFFIC_YL
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA8.Locked=true
+PA8.PinState=GPIO_PIN_RESET
+PA8.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -98,6 +113,12 @@ PC4.Mode=Asynchronous
 PC4.Signal=USART1_TX
 PC5.Mode=Asynchronous
 PC5.Signal=USART1_RX
+PC8.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PC8.GPIO_Label=EXT_TRAFFIC_GR
+PC8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC8.Locked=true
+PC8.PinState=GPIO_PIN_RESET
+PC8.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F303
 PCC.MCU=STM32F303V(B-C)Tx
@@ -189,7 +210,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADC12outputFreq_Value=48000000
 RCC.ADC34outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
